gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/Fondo-seg-1_0001.png \
	images/Fondo-seg-1_0002.png \
	images/Fondo-seg-1_0003.png \
	images/Fondo-seg-1_0004.png \
	images/Fondo-seg-1_0005.png \
	images/Fondo-seg-1_0006.png \
	images/Fondo-seg-1_0007.png \
	images/Fondo-seg-1_0008.png \
	images/Fondo-seg-1_0009.png \
	images/Fondo-seg-1_0010.png \
	images/Fondo-seg-1_0011.png \
	images/Fondo-seg-1_0012.png \
	images/Fondo-seg-1_0013.png \
	images/Fondo-seg-1_0014.png \
	images/Fondo-seg-1_0015.png \
	images/Fondo-seg-1_0016.png \
	images/Fondo-seg-1_0017.png \
	images/Fondo-seg-1_0018.png \
	images/Fondo-seg-1_0019.png \
	images/Fondo-seg-1_0020.png \
	images/Fondo-seg-1_0021.png \
	images/Fondo-seg-1_0022.png \
	images/Fondo-seg-1_0023.png \
	images/Fondo-seg-1_0024.png \
	images/Fondo-seg-1_0025.png \
	images/Fondo-seg-1_0026.png \
	images/Fondo-seg-1_0027.png \
	images/Fondo-seg-1_0028.png \
	images/Fondo-seg-1_0029.png \
	images/Fondo-seg-1_0030.png \
	images/Fondo-seg-1_0031.png \
	images/Fondo-seg-1_0032.png \
	images/Fondo-seg-1_0033.png \
	images/Fondo-seg-1_0034.png \
	images/Fondo-seg-1_0035.png \
	images/Fondo-seg-1_0036.png \
	images/Fondo-seg-1_0037.png \
	images/Fondo-seg-1_0038.png \
	images/Fondo-seg-1_0039.png \
	images/Fondo-seg-1_0040.png \
	images/Fondo-seg-1_0041.png \
	images/Fondo-seg-1_0042.png \
	images/Fondo-seg-1_0043.png \
	images/Fondo-seg-1_0044.png \
	images/Fondo-seg-1_0045.png \
	images/Fondo-seg-1_0046.png \
	images/Fondo-seg-1_0047.png \
	images/Fondo-seg-1_0048.png \
	images/Fondo-seg-2_0001.png \
	images/Fondo-seg-2_0002.png \
	images/Fondo-seg-2_0003.png \
	images/Fondo-seg-2_0004.png \
	images/Fondo-seg-2_0005.png \
	images/Fondo-seg-2_0006.png \
	images/Fondo-seg-2_0007.png \
	images/Fondo-seg-2_0008.png \
	images/Fondo-seg-2_0009.png \
	images/Fondo-seg-2_0010.png \
	images/Fondo-seg-2_0011.png \
	images/Fondo-seg-2_0012.png \
	images/Fondo-seg-2_0013.png \
	images/Fondo-seg-2_0014.png \
	images/Fondo-seg-2_0015.png \
	images/Fondo-seg-2_0016.png \
	images/Fondo-seg-2_0017.png \
	images/Fondo-seg-2_0018.png \
	images/Fondo-seg-2_0019.png \
	images/Fondo-seg-2_0020.png \
	images/Fondo-seg-2_0021.png \
	images/Fondo-seg-2_0022.png \
	images/Fondo-seg-2_0023.png \
	images/Fondo-seg-2_0024.png \
	images/Fondo-seg-2_0025.png \
	images/Fondo-seg-3_0001.png \
	images/Fondo-seg-3_0002.png \
	images/Fondo-seg-3_0003.png \
	images/Fondo-seg-3_0004.png \
	images/Fondo-seg-3_0005.png \
	images/Fondo-seg-3_0006.png \
	images/Fondo-seg-3_0007.png \
	images/Fondo-seg-3_0008.png \
	images/Fondo-seg-3_0009.png \
	images/Fondo-seg-3_0010.png \
	images/Fondo-seg-3_0011.png \
	images/Fondo-seg-3_0012.png \
	images/Fondo-seg-3_0013.png \
	images/Fondo-seg-3_0014.png \
	images/Fondo-seg-3_0015.png \
	images/Fondo-seg-3_0016.png \
	images/Fondo-seg-3_0017.png \
	images/Fondo-seg-3_0018.png \
	images/Fondo-seg-3_0019.png \
	images/Fondo-seg-3_0020.png \
	images/Fondo-seg-3_0021.png \
	images/Fondo-seg-3_0022.png \
	images/Fondo-seg-3_0023.png \
	images/Fondo-seg-3_0024.png \
	images/Fondo-seg-3_0025.png \
	images/Fondo-seg-4_0001.png \
	images/Fondo-seg-4_0002.png \
	images/Fondo-seg-4_0003.png \
	images/Fondo-seg-4_0004.png \
	images/Fondo-seg-4_0005.png \
	images/Fondo-seg-4_0006.png \
	images/Fondo-seg-4_0007.png \
	images/Fondo-seg-4_0008.png \
	images/Fondo-seg-4_0009.png \
	images/Fondo-seg-4_0010.png \
	images/Fondo-seg-4_0011.png \
	images/Fondo-seg-4_0012.png \
	images/Fondo-seg-4_0013.png \
	images/Fondo-seg-4_0014.png \
	images/Fondo-seg-4_0015.png \
	images/Fondo-seg-4_0016.png \
	images/Fondo-seg-4_0017.png \
	images/Fondo-seg-4_0018.png \
	images/Fondo-seg-4_0019.png \
	images/Fondo-seg-4_0020.png \
	images/Fondo-seg-4_0021.png \
	images/Fondo-seg-4_0022.png \
	images/Fondo-seg-4_0023.png \
	images/Fondo-seg-4_0024.png \
	images/Fondo-seg-4_0025.png \
	images/Fondo-seg-4_0026.png \
	images/Fondo-seg-4_0027.png \
	images/Fondo-seg-4_0028.png \
	images/Fondo-seg-4_0029.png \
	images/Fondo-seg-4_0030.png \
	images/Fondo-seg-4_0031.png \
	images/Fondo-seg-4_0032.png \
	images/Fondo-seg-4_0033.png \
	images/Fondo-seg-4_0034.png \
	images/Fondo-seg-4_0035.png \
	images/Fondo-seg-4_0036.png \
	images/Fondo-seg-4_0037.png \
	images/Fondo-seg-4_0038.png \
	images/Fondo-seg-4_0039.png \
	images/Fondo-seg-4_0040.png \
	images/Fondo-seg-4_0041.png \
	images/Fondo-seg-4_0042.png \
	images/Fondo-seg-4_0043.png \
	images/Fondo-seg-4_0044.png \
	images/Fondo-seg-4_0045.png \
	images/Fondo-seg-4_0046.png \
	images/Fondo-seg-4_0047.png \
	images/Fondo-seg-4_0048.png \
	images/Fondo-seg-5_0001.png \
	images/Fondo-seg-5_0002.png \
	images/Fondo-seg-5_0003.png \
	images/Fondo-seg-5_0004.png \
	images/Fondo-seg-5_0005.png \
	images/Fondo-seg-5_0006.png \
	images/Fondo-seg-5_0007.png \
	images/Fondo-seg-5_0008.png \
	images/Fondo-seg-5_0009.png \
	images/Fondo-seg-5_0010.png \
	images/Fondo-seg-5_0011.png \
	images/Fondo-seg-5_0012.png \
	images/Fondo-seg-5_0013.png \
	images/Fondo-seg-5_0014.png \
	images/Fondo-seg-5_0015.png \
	images/Fondo-seg-5_0016.png \
	images/Fondo-seg-5_0017.png \
	images/Fondo-seg-5_0018.png \
	images/Fondo-seg-5_0019.png \
	images/Fondo-seg-5_0020.png \
	images/Fondo-seg-5_0021.png \
	images/Fondo-seg-5_0022.png \
	images/Fondo-seg-5_0023.png \
	images/Fondo-seg-5_0024.png \
	images/Fondo-seg-5_0025.png \
	images/Fondo-seg-5_0026.png \
	images/Fondo-seg-5_0027.png \
	images/Fondo-seg-5_0028.png \
	images/Fondo-seg-5_0029.png \
	images/Fondo-seg-5_0030.png \
	images/Fondo-seg-5_0031.png \
	images/Fondo-seg-5_0032.png \
	images/Fondo-seg-5_0033.png \
	images/Fondo-seg-5_0034.png \
	images/Fondo-seg-5_0035.png \
	images/Fondo-seg-5_0036.png \
	images/Fondo-seg-5_0037.png \
	images/Fondo-seg-5_0038.png \
	images/Fondo-seg-5_0039.png \
	images/Fondo-seg-5_0040.png \
	images/Fondo-seg-5_0041.png \
	images/Fondo-seg-5_0042.png \
	images/Fondo-seg-5_0043.png \
	images/Fondo-seg-5_0044.png \
	images/Fondo-seg-5_0045.png \
	images/Fondo-seg-5_0046.png \
	images/Fondo-seg-5_0047.png \
	images/Fondo-seg-5_0048.png \
	images/Fondo-seg-6_0001.png \
	images/Fondo-seg-6_0002.png \
	images/Fondo-seg-6_0003.png \
	images/Fondo-seg-6_0004.png \
	images/Fondo-seg-6_0005.png \
	images/Fondo-seg-6_0006.png \
	images/Fondo-seg-6_0007.png \
	images/Fondo-seg-6_0008.png \
	images/Fondo-seg-6_0009.png \
	images/Fondo-seg-6_0010.png \
	images/Fondo-seg-6_0011.png \
	images/Fondo-seg-6_0012.png \
	images/Fondo-seg-6_0013.png \
	images/Fondo-seg-6_0014.png \
	images/Fondo-seg-6_0015.png \
	images/Fondo-seg-6_0016.png \
	images/Fondo-seg-6_0017.png \
	images/Fondo-seg-6_0018.png \
	images/Fondo-seg-6_0019.png \
	images/Fondo-seg-6_0020.png \
	images/Fondo-seg-6_0021.png \
	images/Fondo-seg-6_0022.png \
	images/Fondo-seg-6_0023.png \
	images/Fondo-seg-6_0024.png \
	images/Fondo-seg-6_0025.png \
	images/Fondo-seg-6_0026.png \
	images/Fondo-seg-6_0027.png

